--- a/DriverHiring/app/build.gradle
+++ b/DriverHiring/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.firebase:geofire-android-common:3.1.0'
     implementation 'com.google.android.libraries.places:places:2.4.0'
     implementation 'com.google.android.gms:play-services-identity:18.0.0'
+    implementation 'com.shreyaspatil:EasyUpiPayment:2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
