--- a/DriverHiring/app/src/main/AndroidManifest.xml
+++ b/DriverHiring/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -50,12 +51,11 @@
             android:exported="false"
             android:label="@string/title_activity_booking" />
         <activity
-            android:name=".Customer_Booking"
+            android:name=".Driver_Ride"
             android:exported="false" />
         <activity
             android:name=".Driver_Bookings"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:exported="false" />
         <activity
             android:name=".Customer_Reg"
             android:exported="false" />
